# scptdisplay

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml  dependabot.yml
src/: cli.rs  cmd.rs  main.rs  parse.rs  response.rs
