[package]
name = "scptdisplay"
version = "0.1.0"
edition = "2021"
authors = ["berquerant"]
readme = "README.md"
repository = "https://github.com/berquerant/scptdisplay"

[dependencies]
log = "0.4.29"
env_logger = "0.11.9"
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }